--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,14 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.0 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Updated libraries to fix security issues and bugs
+- Fixed mapview not yet loaded bug crash
+- Added aircraft type version number where appropriate
+- Added auto-launch flight tracking agent option
+
+--------------------------------------------------------------------------------------
 Version 0.4.4 (ALPHA4)
 --------------------------------------------------------------------------------------
 - Expanded aircraft tooltips
